Bug 1460234 - Calculate the position in a keyframe segment using double precision; r=hiro

The added test fails without the code changes in this patch.

MozReview-Commit-ID: HXPaxLu1osC